@@ -4,16 +4,15 @@ debug.NoTracingClasses.1[0]=16 java.lang.Object1  1 -1
 debug.NoTracingClasses.2[0]=21 java.lang.ClassLoader1  1 -1
 debug.NoTracingClasses.3[0]=16 java.lang.String1  1 -1
 debug.SplitThreadsAndDataView[0]=0
-history.files.active[0]=[/space/opt/JBuilder7/jdk1.3.1/src.jar]/src/java/lang/Throwable.java
+history.files.active[0]=[/space/opt/JBuilder7/jdk1.3.1/src.jar]/src/java/text/SimpleDateFormat.java
 history.files.open.1[0]=src/org/crosswire/sword/orb/_SWMgrStub.java,F;70,2748
 history.files.open.2[0]=[/space/tomcat/common/lib/servlet.jar]/javax/servlet/http/HttpSession.class
 history.files.open.3[0]=[/space/tomcat/common/lib/servlet.jar]/javax/servlet/http/HttpSessionBindingListener.class
 history.files.open.4[0]=[/space/opt/JBuilder7/jdk1.3.1/src.jar]/src/java/lang/Object.java,F;420,22972
 history.files.open.5[0]=[/space/opt/JBuilder7/jdk1.3.1/src.jar]/src/java/lang/Process.java,F;90,5255
-history.files.open.6[0]=src/org/crosswire/sword/orb/SwordOrb.java,F;70,2620
-history.files.open.7[0]=src/org/crosswire/sword/orb/TestMain.java,F;0,100
-history.files.open.8[0]=[/space/opt/JBuilder7/jdk1.3.1/src.jar]/src/java/lang/Throwable.java,F;180,6461
-history.files.open.9[0]=[/space/opt/JBuilder7/jdk1.3.1/src.jar]/src/java/net/URLClassLoader.java,F;190,7701
+history.files.open.6[0]=[/space/opt/JBuilder7/jdk1.3.1/src.jar]/src/java/text/SimpleDateFormat.java,F;177,8161
+history.files.open.7[0]=src/org/crosswire/sword/orb/SwordOrb.java,F;70,2620
+history.files.open.8[0]=src/org/crosswire/sword/orb/TestMain.java,F;0,118
 import.optimize.legacyPropertiesRead[0]=1
 sys.Author[0]=
 sys.DefaultPackage[0]=org.crosswire.sword.orb
